--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url("heart.jpg");
+    background-image: url("./resources/heart.jpg");
     background-size: contain;
     background-position: center;
 }
