--- a/style.css
+++ b/style.css
@@ -1,380 +1,495 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-}
+* {box-sizing: border-box;}
 
-header {
+body {
     width: 100%;
-    height: 120px;
-    padding: 15px;
-    display: flex;
-    flex-direction: row;
-    background-color: #050505;
-    justify-content: space-evenly;
-    text-align: left;
-}
-
-.main {
-    display: flex;
-    margin-left: -100px;
-}
-
-.main img {
-    width: 100px;
-}
-
-.main h1 {
-    font-size: 32px;
-    color: #fff;
-    font-style: italic;
-    margin-top: 35px;
-    padding: 0;
-}
-
-#searchBox {
-    width: 60%;
-    margin-left: -100px;
-    color: #000;
-}
-
-input[type="text"] {
-    margin-top: 30px;
-    padding: 12px 300px 12px 5px;    
-}
-
-input[type="button"] {
-    padding: 8px 18px;
-    background-color: #ff6347;
-    color: #fff;
-    cursor: pointer;
-    border: none;
-}
-
-input[type="button"]:hover {
-    opacity: 0.8;
-    border: none;
-}
-
-input[type="button"]:focus {
-    border: none;
-    outline: none;
-}
-
-.back {
-    margin-top: 20px;
-    padding: 8px 10px;
-    background-color: #fff;
-    color: #ff6347;
-    border: none;
-    cursor: pointer;
-}
-
-.back:hover {
-    opacity: 0.8;
-    border: none;
-}
-
-.back:focus {
-    border: none;
-    outline: none;
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
-    color: #fff;
-    position: relative;
 }
 
-#title {
-    font-size: 18px;
-    color: #fff;
-    font-style: italic;
-    margin: 15px 20px;
-    padding: 0;
-    position: absolute;
+button {
+    cursor: pointer;
 }
 
-#title img {
-    width: 100px;
-    margin-top: 15px;
+button:hover {
+    opacity: 0.7;
+    outline: none;
 }
 
-a {
+button:focus {
+    border: none;
+    outline: none;
+}
+
+.header {
+    width: 100%;
+    background-color: #ffcd9e;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+#navbar {
+    background-color: #f8c595;
+    width: 100%;
+    overflow: hidden;
+    padding: 2px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+#navbar a {
     text-decoration: none;
+    color: #000;
+}
+
+ul {
+    list-style-type: none;
+    font-weight: 700;
+}
+
+li {
+    display: inline-block;
+    margin: 30px;
+    font-size: 28px;
+}
+
+ #navbar a:hover {
     color: #f00;
 }
 
-.banner {
-    width: 100%;
-    height: 90vh;
-    position: absolute;
-    background-image: url("./resources/heart.jpg");
-    background-size: contain;
-    background-position: center;
-    font-family: serif;
-}
-
-.content {
-    width: 100%;
-    position: absolute;
-    top: 30%;
-    font-family: serif;
-}
-
-.content h1 {
-    width: 30%;
-    font-size: 55px;
-    float: right;
-    color: #fff;
-    margin-right: 160px;
-    padding-top: 40px;
-    
-    text-align: left;
-}
-
-#red {
-    position: absolute;
-    font-size: 22px;
-    font-style: italic;
-    color: #ff6347;
-    padding-left: 960px;
-    font-family: serif;
-}
-
-.banner button {
-    width: 10%;
-    padding: 16px 20px;
-    margin-left: 960px;
-    margin-top: 50px;
-    font-size: 22px;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 6px 18px 0 hsla(0%, 0%, 0%, 0.2); 
+.cart-btn {
+    margin-top: 30px;
+    width: 120px;
+    height: 60px;
+    background-color: #ff7a00;
+    border-radius: 25px;
+    border-color: transparent;
+    align-content: center;
     cursor: pointer;
-    font-weight: 400;
-    color: #ff4500;
+    font-size: 40px;
+    color: #ffffff;
 }
 
-.banner button:hover {
-    border: none;
-    opacity: 0.8;
-}
-
-.banner button:focus {
-    outline: none;
-    border: none;
-}
-
-.sm-icons {
+ #banner {
     width: 100%;
-    height: 10vh;
-    display: inline-block;
-    text-align: center;
-    color: #000;
-    font-size: 18px;
-    position: absolute;
-    z-index: 9;
-    top: 100%;
-    background-color: #fff;
-    margin-top: 5px;
-}
-
-.sm-icons p {
-    margin-top: -75px;
-    font-style: italic;
-    color: #ff6347;
-}
-
-.sm-icons img {
-    margin: 15px;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-}
-
-.sm-icons img:hover {
-    opacity: 0.7;
-}
-
-.footer {
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    height: 10vh;
     display: flex;
-    background-color: #050505;
+    flex-flow: row wrap;
     justify-content: space-evenly;
-    color: #ff6347;
+}
+
+#banner h1{
+    margin-top: 120px;
+    font-size: 70px;
+    color: #ff7a00;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 1.5;
+    margin-left: 100px;
+}
+
+#banner img {
+    width: 700px;
+    height: 600px;
+}
+
+#btn {
+    margin-bottom: 30px;
+    padding: 30px;
+    width: 30%;
+    background-color: #ff7a00;
+    border-radius: 10px;
+    align-self: center;
+    font-size: 28px;
+    color: #ffffff;
+    border-color: transparent;
+    cursor: pointer;
+}
+
+#btn a {
+    text-decoration: none;
+    color: #fff;
+}
+
+
+
+/* Cart button used to open the contact form*/
+.cart-btn {
+    margin-top: 30px;
+    width: 120px;
+    height: 60px;
+    background-color: #ff7a00;
+    border-radius: 25px;
+    border-color: transparent;
+    align-content: center;
+}
+
+span {
+    font-size: 32px;
+}
+
+/*The popup form hidden by default*/
+.form-popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 500px;
+    border: 3px solid #f1f1f1;
     z-index: 9;
-    padding-top: 15px;
-    margin-bottom: -50px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
- div#myContainer {
+/*Add styles to the form container*/
+.form-container {
+    max-width: 700px;
+    max-height: 500px;
+    padding: 5px;
+    background-color: white;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+/*Style the list items in the form*/
+ul {
+    list-style-type: none;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+li {
+    display: inline-block;
+    margin: 30px;
+}
+
+/**Full width input fields*/
+.form-container input[type="text"] {
     width: 100%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: space-evenly;
-    grid-gap: 30px;
-    padding: 20px;
+    padding: 15px;
+    margin: 5px;
+    border: 1px solid black;
+    background-color: #ffcd9e;
 }
 
-.recipe {
-    width: 100%;
-    margin: 0;
+/*Style for continue/checkout button */
+.form-container .form-btn {
+    padding: 16px 4px;
+    border: none;
+    cursor: pointer;
+    width: 35%;
+    margin-bottom: 10px;
+    opacity: 0.8;
+    border-radius: 5px;
 }
 
-.recipe-image {
-    width: 360px;
-    height: 360px;
-    margin: auto;
-    border-radius: 50%;
+/*Add backgorund color to buttons*/
+.continue {
+    background-color: #ffcd9e;
 }
 
-.recipe-name {
-    margin: auto;
-    padding: 12px;
-    color: seashell;
-    font-size: 22px;
-    font-family: serif;
-    background-color: #ff6347;
+.checkout {
+    background-color: #ff7a00;
+    color: #fff;
+}
+
+/*Add hover effects to buttons*/
+.form-container .form-btn:hover {
+    opacity: 1;
+}
+
+.form-popup h4 {
+    font-size: 20px;
     text-align: center;
 }
 
-.recipe-link {
-    text-decoration: none;
-    color: #ff6347;
+
+
+#About {
+    background-color: #000000;
+    padding: 60px;
+    width: 100%;
+    font-size: 40px;
+    text-align: center;
+    color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.heading {
+    font-size: 44px;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-bottom: -100px;
+}
+
+
+#shop {
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.thumbnail1 {
+    background-image: url(./resources/product1.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 500px;
+    width: 400px;
+}
+
+.thumbnail2 {
+    background-image: url(./resources/product2.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 500px;
+    width: 400px;
+}
+
+.thumbnail3 {
+    background-image: url(./resources/product3.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 500px;
+    width: 400px;
+}
+
+.thumbnail4 {
+    background-image: url(./resources/product4.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 500px;
+    width: 400px;
+}
+
+.thumbnail5 {
+    background-image: url(./resources/product5.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 500px;
+    width: 400px;
+}
+
+.thumbnail6 {
+    background-image: url(./resources/product6.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 500px;
+    width: 400px;
+}
+
+.overlay {
+    background: rgba(0, 0, 0, 0.5);
+    height: 500px;
+    width: 385px;
+    border-radius: 10px;
+    opacity: 0;
+    transition: 0.3s;
+    font-size: 44px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    color: #fff;
+}
+
+.overlay:hover {
+    opacity: 1;
+}
+
+.overlay h3 {
+    padding-top: 200px
+}
+
+.product h2 {
+    font-size: 40px;
+}
+
+.row1 {
+    width: 100%;
+    padding: 100px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.row2 {
+    width: 100%;
+    padding: 100px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin-top: -150px;
+}
+
+.addCart {
+    padding: 30px;
+    background-color: #ff7a00;
+    border-radius: 10px;
+    align-self: center;
+    font-size: 28px;
+    color: #ffffff;
+    border-color: transparent;
+}
+
+footer {
+    width: 100%;
+    padding: 60px;
+    background-color: #000;
+    color: white;
+}
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        width: 100%;
+    }    
+
+    #shop {
+        width: 100%;
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+
+    .row2 {
+        margin-top: 1px;
+        margin-left: -110px;
+    }
+}
+
 
 @media only screen and (max-width: 760px) {
-    header {
-        display: flex;
-        flex-flow: column nowrap;
-        height: 250px;
-        margin-top: -25px;
-        margin-bottom: 10px;
-    }
-
-    .main {
-        width: 100%;
-        align-items: center;
-        margin: 10px;
-    }
-
-    .main img {
-        width: 60px;
-    }
-
-    .main h1 {
-        margin-left: -70px;
-        font-size: 20px;
-        padding-top: 55px;
-    }
-
-    #searchBox {
-        width: 100%;
-    }
-
-    input[type="text"] {
-        width: 90%;
-        margin: auto;
-        padding: 12px 120px 12px 5px; 
-    }
-
     .container {
-        height: 100vh;
-    }
-
-    .banner {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-
-    }
-
-    #title {
-        height: 300px;
-        flex-flow: row nowrap;
-        align-items: right;
-        margin-left: 270px;
-    }
-
-    #title img {
-        width: 60px;
-        margin-left: 30px;
-    }
-
-    #title h1 {
-        font-size: 20px;
-    }
-
-    .content {
         width: 100%;
-        text-align: right;    
+        overflow-x: hidden;
+    }
+    
+    #navbar {
+        width: 100%;
+        height: 150px;
+        overflow: hidden;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-evenly;
+        align-content: center;
     }
 
-    .content h1{
-        font-size: 30px;
-        margin-right: 10px;
-        text-align: right;
-        height: 300px;
-        line-height: 1.7;
-        padding-top: 0px;
-        margin-top: -40px;
-    }
-
-    #red {
-        margin-top: 350px;
-        padding-left: 0px;
-        font-size: 18px;
-        position: relative;
-        text-align: right;
-        margin-right: 10px;
-    }
-
-    .banner button {
-        margin: 20px;
-        padding: 4px;
+    #navbar img {
         width: 100px;
+        align-self: center;
+        margin-top: -35px;
+    }
+
+    #navbar ul {
+        display: inline-flex;
+        margin-left: -50px;
+        margin-top: 5px;
+    }
+
+    #navbar li {
+        font-size: 18px;
+        margin: 20px;
+    }
+
+    .cart-btn {
+        margin-top: -120px;
+        width: 100px;
+        padding: 10px;
+        margin-left: 280px;
+        align-self: flex-end;
+    }
+
+    span {
         font-size: 18px;
     }
 
-    .sm-icons {
-        height: 250px;
-        margin-top: 8px;
-    }
-
-    .footer {
+    #banner {
         width: 100%;
-        flex-flow: column nowrap;
-        align-items: center;
-        margin-bottom: -10px;
-        height: 350px;
-    }
-
-    .footer h2 {
-        font-size: 20px;
-    }
-
-    .footer p {
-        margin:-10px  10px;
-    }
-
-    div#myContainer {
-        width: 100%;
-        margin: auto;
-        grid-template-columns: auto;
+        display: flex;
+        flex-flow: column wrap;
         justify-content: space-evenly;
     }
+    
+    #banner h1{
+        margin-top: 20px;
+        font-size: 40px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+        padding: 10px;
+        margin-left: -10px;
+    }
+    
+    #banner img {
+        width: 420px;
+        height: 400px;
+        margin: auto;
+    }
+    
+    #btn {
+        padding: 10px;
+        width: 150px;
+        align-self: center;
+        font-size: 20px;
+    }
 
-    .recipe-image {
-        width: 240px;
-        height: 240px;
+    #About {
+        padding: 40px;
+        width: 100%;
+        font-size: 24px;
+    }
+    
+    .heading {
+        font-size: 34px;
+        margin-bottom: -150px;
+        line-height: 3rem;
+    }
+
+    #shop {
+        width: 100%;
+        display: flex;
+        flex-flow: row wrap;
+    }
+
+    .row1, .row2 {
+        flex-direction: row;
+        width: 80%;
         margin-left: 50px;
     }
-}
+
+    .row2 {
+        margin-top: -200px;
+    }
+
+    .product h2 {
+        font-size: 32px;
+    }
+
+    .addCart {
+        padding: 14px;
+        align-self: center;
+        font-size: 22px;
+    }
+    
+    footer {
+        width: 100%;
+        padding: 40px;
+    }
+
+    footer img {
+        width: 100px;
+    }
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
